<?xml version="1.0"?>
<package>
  <name>hybris_monitor</name>
  <version>0.1.0</version>
  <description>Planning monitoring</description>

  <author>Tim Niemueller</author>
  <maintainer email="niemueller@kbsg.rwth-aachen.de">Tim Niemueller</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>fawkes_msgs</build_depend>
  <build_depend>continual_planning_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>fawkes_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>continual_planning_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
